--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "@react-native-community/slider": "^2",
+    "@react-native-community/slider": "3.0.3",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
